varylab jnlp service build started
git-svn-id: http://fs:8000/svn/DDG@4319 986badc2-2932-0410-96f0-8e0caa59e138

--- a/src-website/style.css
+++ b/src-website/style.css
@@ -1,3 +1,6 @@
+.maintable {
+	width: 500px;	
+}
 
 .newlineLeft {
 	clear:left;
@@ -25,6 +28,11 @@
 p {
 	color : #003366;
 	font-style:oblique;
+}
+
+
+.bottom_space {
+	margin-bottom:10px;
 }
 
 .header {
